@@ -364,6 +364,7 @@ Heat and Cooling meter Kamstrup Multical 603 (multical603) (in C1 mode)
 Heat and Cooling meter Kamstrup Multical 803 (multical803) (in C1 mode)
 Heat meter Apator Elf (elf)
 Heat meter Diehl Sharky 775 (sharky)
+Heat and Cooling meter BMeters Hydrocal-M3 (hydrocalm3)
 
 Supported room sensors:
 Bmeters RFM-AMB Thermometer/Hygrometer (rfmamb)
