@@ -30,6 +30,7 @@
     X(APATOR08,  0x8614/*APT?*/,    0x03,  0x03) \
     X(APATOR162, MANUFACTURER_APA,  0x06,  0x05) \
     X(APATOR162, MANUFACTURER_APA,  0x07,  0x05) \
+    X(CCx01,     MANUFACTURER_GSS,  0x02,  0x01) \
     X(CMA12W,    MANUFACTURER_ELV,  0x1b,  0x20) \
     X(COMPACT5,  MANUFACTURER_TCH,  0x04,  0x45) \
     X(COMPACT5,  MANUFACTURER_TCH,  0xc3,  0x45) \
@@ -77,6 +78,7 @@
     X(LANSENPU,  MANUFACTURER_LAS,  0x00,  0x0b) \
     X(LSE_07_17,  MANUFACTURER_LSE, 0x07,  0x16) \
     X(LSE_07_17,  MANUFACTURER_LSE, 0x07,  0x17) \
+    X(LSE_08,     MANUFACTURER_LSE, 0x08,  0x01) \
     X(MKRADIO3,  MANUFACTURER_TCH, 0x62,  0x74) \
     X(MKRADIO3,  MANUFACTURER_TCH, 0x72,  0x74) \
     X(MKRADIO4,  MANUFACTURER_TCH, 0x62,  0x95) \
@@ -91,11 +93,13 @@
     X(MULTICAL403,MANUFACTURER_KAM, 0x0b,  0x34) \
     X(MULTICAL403,MANUFACTURER_KAM, 0x0c,  0x34) \
     X(MULTICAL403,MANUFACTURER_KAM, 0x0d,  0x34) \
+    X(MULTICAL602,MANUFACTURER_KAM, 0x04,  0x1c) \
     X(MULTICAL603,MANUFACTURER_KAM, 0x04,  0x35) \
     X(MULTICAL803,MANUFACTURER_KAM, 0x04,  0x39) \
     X(OMNIPOWER,  MANUFACTURER_KAM, 0x02,  0x30) \
     X(RFMAMB,     MANUFACTURER_BMT, 0x1b,  0x10) \
     X(RFMTX1,     MANUFACTURER_BMT, 0x07,  0x05) \
+    X(SENSOSTAR,  MANUFACTURER_EFE, 0x04,  0x00) \
     X(TSD2,       MANUFACTURER_TCH, 0xf0,  0x76) \
     X(Q400,       MANUFACTURER_AXI, 0x07,  0x10) \
     X(QCALORIC,   MANUFACTURER_QDS, 0x08,  0x35) \
@@ -107,6 +111,7 @@
     X(TOPASESKR,  MANUFACTURER_AMT, 0x06,  0xf1) \
     X(TOPASESKR,  MANUFACTURER_AMT, 0x07,  0xf1) \
     X(ULTRIMIS,   MANUFACTURER_APA, 0x16,  0x01) \
+    X(UNISMART,   MANUFACTURER_AMX, 0x03,  0x01) \
     X(VARIO451,   MANUFACTURER_TCH, 0x04,  0x27) \
     X(VARIO451,   MANUFACTURER_TCH, 0xc3,  0x27) \
     X(WATERSTARM, MANUFACTURER_DWZ, 0x06,  0x02) \
@@ -114,11 +119,7 @@
     X(WATERSTARM, MANUFACTURER_EFE, 0x07,  0x03) \
     X(WHE46X,     MANUFACTURER_LSE, 0x08,  0x18) \
     X(WHE5X,      MANUFACTURER_LSE, 0x08,  0x34) \
-    X(SENSOSTAR,  MANUFACTURER_EFE, 0x04,  0x00) \
-    X(CCx01,      MANUFACTURER_GSS, 0x02,  0x01) \
-    X(LSE_08,     MANUFACTURER_LSE, 0x08,  0x01) \
     X(WEH_07,     MANUFACTURER_WEH, 0x07,  0xfe) \
-    X(UNISMART,   MANUFACTURER_AMX, 0x03,  0x01) \
 
 
 // End of list
